<resources>
    <!-- TODO mettere tutti i nomi delle stringhe in inglese-->
    <string name="app_name">Communimib</string>
    <string name="welcome">Benvenuto</string>
    <string name="signin_with_your_information">Accedi con le tue credenziali</string>
    <string name="email_address">Indirizzo email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Password dimenticata</string>
    <string name="login">Login</string>
    <string name="not_signUp">Non hai un account?</string>
    <string name="signup">Registrati</string>
    <string name="insert_university_credential">Inserisci le tue credenziali universitarie</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="confirm_password">Conferma password</string>
    <string name="join_us">Unisciti a noi</string>
    <string name="already_signup">Sei già registrato?</string>
    <string name="empty_field">Questo campo è obbligatorio</string>
    <string name="invalid_field">Valore inserito non valido</string>
    <string name="too_short_field">Valore inserito troppo corto</string>
    <string name="number_missing">Inserisci almeno un numero</string>
    <string name="capital_case_missing">Inserisci almeno un carattere maiuscolo</string>
    <string name="special_char_missing">Inserisci almeno un carattere speciale</string>
    <string name="number_not_allowed">Numeri non consentiti</string>
    <string name="special_char_not_allowed">Caratteri speciali non consentiti</string>
    <string name="not_equal_password">Le password non corrispondono</string>
    <string name="not_university_email">Inserire la mail universitaria</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_email">CONFERMA MAIL</string>
    <string name="to_confirm_your_profile_click_on_link">Per confermare il tuo profilo, clicca sul link che hai ricevuto tramite mail</string>
    <string name="back_to_login">Torna al login</string>
    <string name="update">Aggiorna</string>
    <string name="mail_not_received">Non hai ricevuto nessuna mail?</string>
    <string name="generate_new_mail">Per generare una nuova mail</string>
    <string name="click_here">Clicca qui</string>
    <string name="insert_your_university_mail_to_reset_password">Inserisci la tua mail universitaria per effettuare il reset della password</string>
    <string name="next">Avanti</string>
    <string name="user_not_authenticated_error"> Utente non autenticato </string>
    <string name="email_sent">La mail è stata inviata, controlla la tua casella di posta elettronica</string>
    <string name="send_email">Invia mail</string>
    <string name="signup_error">Registrazione fallita, controlla i dati e riprova</string>
    <string name="signup_firebase_user_error">Registrazione fallita, si è verificato un errore inaspettato</string>
    <string name="signin_error">Login fallito, controlla i dati e riprova</string>
    <string name="email_sending_error">Si è verificato un errore durante l\'invio della mail</string>
    <string name="localdb_insert_error">Si è verificato un errore durante il salvataggio locale</string>
    <string name="localdb_get_error">Si è verificato un errore durante l\'acquisizione dei dati locali</string>
    <string name="localdb_update_error">Si è verificato un errore durante l\'aggiornamento dei dati locali</string>
    <string name="remotedb_insert_error">Si è verificato un errore durante il salvataggio remoto</string>
    <string name="remotedb_get_error">Si è verificato un errore durante l\'acquisizione dei dati remoti</string>
    <string name="remotedb_update_error">Si è verificato un errore durante l\'aggiornamento dei dati remoti</string>
    <string name="user_not_found_error">Utente non trovato</string>
    <string name="not_accepted_parameters">"I parametri inseriti non sono accettabili"</string>
    <string name="system_error"> Si è verificato un errore nel sistema</string>
    <string name="dashboard">Bacheca</string>
    <string name="profile">Profilo</string>
    <string name="reports">Segnalazioni</string>
    <string name="create_new_report">Crea una nuova segnalazione</string>
    <string name="new_report"> Nuova segnalazione </string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Annulla</string>
    <string name="insert_description">Inserisci una breve descrizione</string>
    <string name="report_title">Titolo della segnalazione</string>
    <string name="building">Edificio</string>
    <string name="category">Categoria</string>
    <string name="button_add_new_report">Bottone per aggiungere una nuova segnalazione</string>
    <string name="report_creation_error">Si è verificato un errore durante la memorizzazione della segnalazione nel sistema</string>
    <string name="report_deleting_error">Si è verificato un errore durante cancellazione della segnalazione</string>
    <string name="post_creation_error"> Si è verificato un errore durante la memorizzazione del post nel sistema</string>
    <string name="post_deleting_error"> Si è verificato un errore durante la cancellazione del post</string>
    <string name="post_undo_deleting_error">Si è verificato un errore durante il ripristino del post</string>
    <string name="close"> Chiudi </string>
    <string name="report_closed_correctly"> Segnalazione chiusa correttamente </string>
    <string name="button_favorite_buildings_selection">Bottone per selezionare gli edifici preferiti</string>
    <string name="button_filter_selection">Bottone per selezionare i filtri degli edifici</string>
    <string name="main_menu_button">bottone_principale_del_menu</string>
    <string name="select_buildings_filters">Seleziona gli edifici per filtrare le segnalazioni</string>
    <string name="filter_by_favorite_buildings">Visualizza le segnalazioni dei miei edifici preferiti</string>
    <string name="show_all_buildings_reports">Visualizza le segnalazioni di tutti gli edifici</string>
    <string name="choose_favorite_buildings">Scegli i tuoi edifici preferiti</string>
    <string name="favorite_explain_1">Riceverai notifiche in tempo reale delle segnalazioni associate agli edifici selezionati</string>
    <string name="favorite_explain_2">Quando aprirai l\'applicazione le segnalazioni verranno filtrate automaticamente secondo gli edifici scelti</string>
    <string name="category_name"> Nome categoria</string>
    <string name="remote_save_user_favorite_buildings_error">Errore nel salvataggio remoto degli edifici preferiti dell\'utente</string>
    <string name="local_save_user_favorite_buildings_error">Errore nel salvataggio locale degli edifici preferiti dell\'utente</string>
    <string name="local_read_user_favorite_buildings_error">Errore nella lettura locale degli edifici preferiti dell\'utente</string>
    <string name="remote_read_user_favorite_buildings_error">Errore nella lettura locale degli edifici preferiti dell\'utente</string>
    <string name="no_favorites_building"> Nessun edificio è selezionato come preferito</string>
    <string name="search">Cerca...</string>
    <string name="report_description">Descrizione della segnalazione</string>
    <string name="report_category">Categoria della segnalazione</string>
    <string name="published_by">Pubblicato da</string>
    <string name="new_post_button">Bottone per creare una nuovo post nella bacheca</string>
    <string name="post_title">Titolo del post</string>
    <string name="create_new_post">Crea una nuovo post</string>
    <string name="new_post"> Nuovo post </string>
    <string name="back">Indietro</string>
    <string name="publish">Pubblica</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate. </string>
    <string name="this_is_post_title">Questo è il titolo di un post</string>
    <string name="button_add_images">Bottone per aggiungere immagine</string>
    <string name="add_post_images">Aggiungi una o più immagini al post (opzionale)</string>

    <string name="just_now">Adesso</string>
    <string name="minutes_unit">m</string>
    <string name="hours_unit">h</string>
    <string name="days_unit">g</string>
    <string name="choose_category">Seleziona una categoria:</string>
    <string name="provide_optional_email_contact">Inserisci un contatto e-mail (opzionale)</string>
    <string name="provide_optional_website">Inserisci un link di un sito web (opzionale)</string>
    <string name="publish_your_comment">Pubblica il tuo commento</string>

    <string name="comment_read_error">Si è verificato un errore nel caricamento dei commenti</string>
    <string name="comment_creation_error">Si è verificato un errore durante la creazione del commento</string>
    <string name="button_back_to_post">Bottone per tornare al post</string>
    <string name="show_new_posts">Visualizza i nuovi post</string>

    <string name="invalid_email">Inserisci una mail valida</string>
    <string name="invalid_link">Inserisci un link valido</string>
    <string name="click_to_edit">CLICCA PER MODIFICARE</string>

    <string name="post_removed">Il post è stato rimosso</string>
    <string name="logout_button">Bottone di logout</string>
    <string name="comments"> Commenti </string>
    <string name="no_favorite_buildings_chosen">Prova a selezionare degli edifici preferiti</string>
    <string name="no_favorite_buildings_reports">Non sono presenti segnalazioni per i tuoi edifici preferiti</string>
    <string name="no_current_filters_reports">Non sono presenti segnalazioni per i filtri impostati</string>
    
    <string name="invalid_data_changes_cancelled">"I nuovi dati inseriti non sono validi, le modifiche sono annullate"</string>
    <string name="name_surname_updated">"Nome e cognome aggiornati correttamente"</string>
    <string name="propic_updated">Immagine profilo aggiornata correttamente"</string>
    <string name="report_created">"La segnalazione è stata creata con successo"</string>
</resources>