<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="230dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_report"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/reportListItem_imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/reportListItem_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/reportListItem_user_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="12dp"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/reportListItem_user_name"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                tools:text="@string/surname" />

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="-150dp"
                android:layout_marginEnd="-120dp"
                app:cardCornerRadius="130dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/reportListItem_buildingImage"
                        android:layout_width="210dp"
                        android:layout_height="155dp"
                        android:contentDescription="@string/building"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/edificiou1"
                        android:tintMode="src_atop"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:tint="#54000000" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/reportListItem_title"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                tools:text="@string/report_title" />


            <TextView
                android:id="@+id/reportListItem_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_right_corners"
                android:backgroundTint="@color/md_theme_light_secondaryContainer"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:textColor="@color/seed"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reportListItem_description"
                tools:text="Malfunzionamento" />

            <TextView
                android:id="@+id/reportListItem_description"
                android:layout_width="220dp"
                android:layout_height="52dp"
                android:layout_marginTop="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reportListItem_title"
                tools:text="breve descrizione per descrivere più descrittivamente la segnalazione" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/reportListItem_closeButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/close"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/reportListItem_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reportListItem_category" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>